--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 	email = alex@louden.com
 [core]
 	excludesfile = /Users/alex/.gitignore_global
+	editor = subl -n -w
 [difftool "sourcetree"]
 	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
 	path = 
