--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,10 @@
 [user]
 	name = Alex Louden
 	email = alex@louden.com
+	signingkey = E5E90055152127FE
 [core]
 	excludesfile = /Users/alex/.gitignore_global
-	editor = subl -n -w
+	editor = /usr/local/bin/subl -n -w
 [difftool "sourcetree"]
 	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
 	path = 
@@ -25,11 +26,14 @@
 	tool = Kaleidoscope
 [credential]
 	helper = osxkeychain
-[filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
-	required = true
 [push]
-	default = matching
+	default = current
 [url "ssh://git@heroku.com/"]
 	insteadOf = https://git.heroku.com/
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
