--- a/.gitconfig
+++ b/.gitconfig
@@ -34,6 +34,7 @@
 	helper = osxkeychain
 [push]
 	default = current
+	autoSetupRemote = true
 [url "ssh://git@heroku.com/"]
 	insteadOf = https://git.heroku.com/
 [url "ssh://git@github.com/"]
@@ -54,3 +55,5 @@
 	program = /usr/local/bin/gpg
 [fetch]
 	prune = true
+[submodule]
+	recurse = true
